Add u-boot images for eMMC/NAND/SPI boot
Added u-boot.bin for eMMC boot.
Added u-boot.bin and u-boot-spl.bin for NAND boot.
Added u-boot.bin for SPI boot.

Change-Id: I15b12a4af83f6b77ee9a3142d2c78965f556a705

--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,8 @@ lst/
 *.rar
 !ThirdParty/FATFS/doc/img/mkfatimg.zip
 !SampleCode/CRYPTO_SHA_MTP/image.bin
+!Loaders/u-boot/eMMC/u-boot.bin
+!Loaders/u-boot/NAND/u-boot.bin
+!Loaders/u-boot/NAND/u-boot-spl.bin
+!Loaders/u-boot/SPI/u-boot.bin
 
